Move CSS into dedicated folder

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <!-- Roboto Font -->
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
-        <link href="site.css" rel="stylesheet">
+        <link href="css/site.css" rel="stylesheet">
 
         <!-- Crush 40 JavaScript -->
 
