Finish "Band Members" section of "Introducing Crush 40"

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 TWO-SIDE SPLIT: Band Members
                 STRIP: Mention other band members
                 FULL: Why is their name the way it is?
-                STRIP (with edges as guitars): Oh yeah - and they have custom-built guitars too!
+                (Straight) STRIP (with edges as guitars): Oh yeah - and they have custom-built guitars too!
                 STATS
                 IMAGES
 
@@ -78,8 +78,8 @@
                 <!--<p>Containing: Info about the band, interactive trivia quizes, complete listings of live shows, listings of gear, you name it!</p>-->
 
                 <div class="btnSet">
-                    <button class="filledButton btnExplore"><span>Explore <img src="img/icons/smallDownArrow.svg"></span></button>
-                    <button class="emptyButton btnViewAll">View all sections</button>
+                    <button class="filledButton btnExplore btnWidthNormal"><span>Explore <img src="img/icons/smallDownArrow.svg"></span></button>
+                    <button class="emptyButton btnViewAll btnWidthNormal">View all sections</button>
                 </div>
             </div>
         </div>
@@ -92,7 +92,7 @@
                 <h2>What is Crush 40?</h2>
             </div>
 
-            <div class="whoIsC40 strip">
+            <div class="whoIsC40 strip stripUp">
                 <div class="stripBack"></div>
 
                 <!-- Text -->
@@ -121,6 +121,10 @@
                 <p class="johnnyDesc">Pelting out strong rock melodies you can't avoid singing along to!</p>
                 <img class="johnnyImg img" src="img/content/Johnny.png">
 
+                <div class="johnnyTogetherImg">
+                    <img class="johnnyTogetherImgImg" src="img/content/JohnnyAndJun.png">
+                </div>
+
                 <div style="grid-area: gtr;" class="centreSeparator"></div>
 
                 <!-- Jun -->
@@ -128,6 +132,25 @@
                 <h2 class="junTitle title">Jun Senoue</h2>
                 <p class="junDesc">Sliding between lead and rhythm, creating excellent grooves and irresistable solos!</p>
                 <img class="junImg img" src="img/content/Jun.jpg">
+
+                <div class="junMrJun">
+                    <h3>"Mr Jun Senoue!"</h3>
+                    <p>Johnny <i>loves</i> introducing Jun at Crush 40 shows... <b>A lot</b>...</p>
+                    <img src="img/Placeholder.png">
+                </div>
+            </div>
+
+            <div class="otherBandMembers strip stripDown">
+                <div class="stripBack"></div>
+
+                <div class="stripText">
+                    <h3>Drums and bass?</h3>
+                    <p>The drummer and bassist are often interchangable for Crush 40 - the band is primilarly just Johnny and Jun.</p> 
+                    <p>They've had a number of drummers and bass players fill in for recordings, shows etc. over the years - or have relied on <span style="font-size: 150%">backing tracks</span> live.</span></p>
+                    <button style="font-size: 100%" class="emptyButton btnWidthWide">View other members</button>
+                </div>
+
+                <img src="img/Placeholder.png" class="stripImg">
             </div>
             
         </div>
