Improve responsiveness of site

--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
                     <img class="johnnyTogetherImgImg" src="img/content/JohnnyAndJun.png">
                 </div>
 
-                <div style="grid-area: gtr;" class="centreSeparator"></div>
+                <div class="centreSeparator"></div>
 
                 <!-- Jun -->
                 <h4 class="junIndicator indicator">GUITAR</h4>
                 <h2 class="junTitle title">Jun Senoue</h2>
-                <p class="junDesc">Sliding between lead and rhythm, creating excellent grooves and irresistable solos!</p>
+                <p class="junDesc">Laying down irresistable lead and rhythm for every song!</p>
                 <img class="junImg img" src="img/content/Jun.jpg">
 
                 <div class="junMrJun">
@@ -145,8 +145,9 @@
 
                 <div class="stripText">
                     <h3>Drums and bass?</h3>
-                    <p>The drummer and bassist are often interchangable for Crush 40 - the band is primilarly just Johnny and Jun.</p> 
-                    <p>They've had a number of drummers and bass players fill in for recordings, shows etc. over the years - or have relied on <span style="font-size: 150%">backing tracks</span> live.</span></p>
+                    <p>"Crush 40" does not have a set drumer and bass player!</p> 
+                    <p>They've had a number of interchangable drummers and bass players fill in for recordings, shows etc. over the years - or have relied on <span style="font-size: 150%">backing tracks</span> live.</span></p>
+                    <p>You can view a complete list of all the drummers/bass players they've used, if you'd like.</p>
                     <button style="font-size: 100%" class="emptyButton btnWidthWide">View other members</button>
                 </div>
 
