--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <h3>Drums and bass?</h3>
                     <p>"Crush 40" does not have a set drumer and bass player!</p> 
                     <p>They've had a number of interchangable drummers and bass players fill in for recordings, shows etc. over the years - or have relied on <span style="font-size: 150%">backing tracks</span> live.</span></p>
-                    <p>You can view a complete list of all the drummers/bass players they've used, if you'd like.</p>
+                    <p>You can view a complete list of all the drummers/bass players they've used here:</p>
                     <button style="font-size: 100%" class="emptyButton btnWidthWide">View other members</button>
                 </div>
 
