Add vertical parallax to site

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link href="css/site.css" rel="stylesheet">
 
         <!-- Crush 40 JavaScript -->
-
+        <script src="js/site.js"></script>
     </head>
     <body>
 
@@ -125,7 +125,7 @@
                     <img class="johnnyTogetherImgImg" src="img/content/JohnnyAndJun.png">
                 </div>
 
-                <div class="centreSeparator"></div>
+                <div class="centreSeparator" data-parallax="background" data-parallax-speed="3"></div>
 
                 <!-- Jun -->
                 <h4 class="junIndicator indicator">GUITAR</h4>
