Add horizontal parallax for mobile

--- a/index.html
+++ b/index.html
@@ -31,36 +31,6 @@
                 IMAGES
 
             - Over the years...
-
-            - 
-
-            Topics:
-
-            - Band History
-            - Show List
-            - Discography List
-            - Band History
-            - Documentary
-            - Trivia Quiz
-            - Photos
-            - Story
-            - Fonts
-            - Link to Discord + YT
-            - List of gear
-
-            Buttons
-
-            - Explore (CTA)
-            - View all sections
-            
-            At the bottom of the top section, have a few sliders to switch between the following categories:
-
-            1. About Crush 40
-            2. Watch them live
-            3. 
-
-            On the side of the top section, have a section that lets you jump somewhere specific.
-    
         -->
 
         <div class="background"></div>
@@ -125,7 +95,7 @@
                     <img class="johnnyTogetherImgImg" src="img/content/JohnnyAndJun.png">
                 </div>
 
-                <div class="centreSeparator" data-parallax="background" data-parallax-speed="4"></div>
+                <div class="centreSeparator" data-parallax="backgroundY" data-parallax-speed="4" data-parallax-change-at="1000"></div>
 
                 <!-- Jun -->
                 <h4 class="junIndicator indicator">GUITAR</h4>
