Improve mobile appearance

--- a/index.html
+++ b/index.html
@@ -91,9 +91,7 @@
                 <p class="johnnyDesc">Pelting out strong rock melodies you can't avoid singing along to!</p>
                 <img class="johnnyImg img" src="img/content/Johnny.png">
 
-                <div class="johnnyTogetherImg">
-                    <img class="johnnyTogetherImgImg" src="img/content/JohnnyAndJun.png">
-                </div>
+                <img class="johnnyTogetherImg" src="img/content/JohnnyAndJun.png">
 
                 <div class="centreSeparator" data-parallax="backgroundY" data-parallax-speed="4" data-parallax-change-at="1000"></div>
 
@@ -116,7 +114,7 @@
                 <div class="stripText">
                     <h3>Drums and bass?</h3>
                     <p>"Crush 40" does not have a set drummer and bass player!</p> 
-                    <p>They've had a number of interchangable drummers and bass players fill in for recordings, shows etc. over the years - or have relied on <span style="font-size: 150%">backing tracks</span> live.</span></p>
+                    <p>They either rely on a <span style="font-size: 150%">backing track</span> live to fill them in, or have a bassist/drummer fill in for them temporarily.</span></p>
                     <p>You can view a complete list of all the drummers/bass players they've used here:</p>
                     <button style="font-size: 100%" class="emptyButton btnWidthWide">View other members</button>
                 </div>
