Improve downward strip appearance on mobile

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <div class="stripText">
                     <h3>Drums and bass?</h3>
                     <p>"Crush 40" does not have a set drummer and bass player!</p> 
-                    <p>They either rely on a <span style="font-size: 150%">backing track</span> live to fill them in, or have a bassist/drummer fill in for them temporarily.</span></p>
+                    <p>Either relying on a <span style="font-size: 150%">backing track</span> live, or some other member to fill in temporarily.</span></p>
                     <p>You can view a complete list of all the drummers/bass players they've used here:</p>
                     <button style="font-size: 100%" class="emptyButton btnWidthWide">View other members</button>
                 </div>
