--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
             </div>
 
-            <div class="bandMembers">
+            <div class="bandMembers introSection">
 
                 <!-- Johnny -->
                 <h4 class="johnnyIndicator indicator">VOCALS</h4>
@@ -114,12 +114,27 @@
                 <div class="stripText">
                     <h3>Drums and bass?</h3>
                     <p>"Crush 40" does not have a set drummer and bass player!</p> 
-                    <p>Either relying on a <span style="font-size: 150%">backing track</span> live, or some other member to fill in temporarily.</span></p>
+                    <p>They either rely on a <span style="font-size: 120%">backing track</span> live, or some other member to fill in temporarily.</span></p>
                     <p>You can view a complete list of all the drummers/bass players they've used here:</p>
                     <button style="font-size: 100%" class="emptyButton btnWidthWide">View other members</button>
                 </div>
 
                 <img src="img/Placeholder.png" class="stripImg">
+            </div>
+
+            <!-- Why "Crush 40"? -->
+            <div class="blockTitle">
+                <h2>Why "Crush 40"?</h2>
+            </div>
+            
+            <div class="naming introSection">
+                <p>The band was originally titled <span style="font-size: 120%">"Sons of Angels"</span> - but they soon discovered a <i>Norwegian rock band</i> already had the same name, and were thinking <span style="font-size: 80%">"Sons of..."</span>.</p>
+                <p>So, they changed it - and their new name, "Crush 40", was a combination of Johnny's wishes at the time, as well as Jun's personal preferences:</p>
+            </div>
+
+            <!-- Why "Crush 40"? -->
+            <div class="blockTitle">
+                <h2>Why "Crush 40"?</h2>
             </div>
             
         </div>
