Adjust text content

--- a/index.html
+++ b/index.html
@@ -128,13 +128,8 @@
             </div>
             
             <div class="naming introSection">
-                <p>The band was originally titled <span style="font-size: 120%">"Sons of Angels"</span> - but they soon discovered a <i>Norwegian rock band</i> already had the same name, and were thinking <span style="font-size: 80%">"Sons of..."</span>.</p>
+                <p>The band was originally titled <span style="font-size: 120%">"Sons of Angels"</span> - but they soon discovered a <i>Norwegian rock band</i> already had the same name, who were thinking <span style="font-size: 80%">"Sons of..."</span>.</p>
                 <p>So, they changed it - and their new name, "Crush 40", was a combination of Johnny's wishes at the time, as well as Jun's personal preferences:</p>
-            </div>
-
-            <!-- Why "Crush 40"? -->
-            <div class="blockTitle">
-                <h2>Why "Crush 40"?</h2>
             </div>
             
         </div>
