Improve file structure

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="opening-intro">
 
                 <!-- Logo -->
-                <img src="img/logo/logo_white.svg" alt="Crush 40 Logo">
+                <img src="img/logo_white.svg" alt="Crush 40 Logo">
 
                 <!-- Text -->
                 <h2>Info, live shows, trivia, history, discography - and more!</h2> 
