Create floating panel layout

--- a/index.html
+++ b/index.html
@@ -166,5 +166,18 @@
                 <p class="imgCaption">A placeholder image</p>
             </div>
         </div>
+
+        <div class="floating">
+            <div class="panel">
+                <div class="titlebar">
+                    <p class="title"><b>My Thing</b></p>
+                    <p class="close">X</p>
+                </div>
+
+                <div class="contents">
+                    
+                </div>
+            </div>
+        </div>
     </body>
 </html>
