Add "show panel" JS code

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <p>"Crush 40" does not have a set drummer and bass player!</p> 
                     <p>They either rely on a <span style="font-size: 120%">backing track</span> live, or some other member to fill in temporarily.</span></p>
                     <p>You can view a complete list of all the drummers/bass players they've used here:</p>
-                    <button style="font-size: 100%" class="emptyButton btnWidthWide">View other members</button>
+                    <button style="font-size: 100%" class="emptyButton btnWidthWide" href="#" data-action="panel" data-page-name="allBandMembers">View other members</button>
                 </div>
 
                 <img src="img/Placeholder.png" class="stripImg">
@@ -168,14 +168,16 @@
         </div>
 
         <div class="floating">
-            <div class="panel">
+            <div class="panel" id="myPanel">
                 <div class="titlebar">
                     <p class="title"><b>My Thing</b></p>
                     <p class="close">X</p>
                 </div>
 
                 <div class="contents">
-                    
+                    <div class="page" data-page-name="allBandMembers">
+
+                    </div>
                 </div>
             </div>
         </div>
