--- a/index.html
+++ b/index.html
@@ -170,12 +170,12 @@
         <div class="floating">
             <div class="panel" id="myPanel">
                 <div class="titlebar">
-                    <p class="title"><b>My Thing</b></p>
+                    <p class="title">Test</p>
                     <p class="close">X</p>
                 </div>
 
                 <div class="contents">
-                    <div class="page" data-page-name="allBandMembers">
+                    <div class="page" data-page-name="allBandMembers" data-page-title="All Band Members">
 
                     </div>
                 </div>
