--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
         </div>
 
         <div class="floating">
+            <div class="floatingClose"></div>
             <div class="panel" id="myPanel">
                 <div class="titlebar">
                     <p class="title">Test</p>
@@ -176,7 +177,7 @@
 
                 <div class="contents">
                     <div class="page" data-page-name="allBandMembers" data-page-title="All Band Members">
-
+                        
                     </div>
                 </div>
             </div>
