Add Proper Close Button

--- a/index.html
+++ b/index.html
@@ -172,12 +172,12 @@
             <div class="panel" id="myPanel">
                 <div class="titlebar">
                     <p class="title">Test</p>
-                    <p class="close">X</p>
+                    <button class="close closeButton"><img src="img/icons/smallCloseButton.svg"></button>
                 </div>
 
                 <div class="contents">
                     <div class="page" data-page-name="allBandMembers" data-page-title="All Band Members">
-                        
+
                     </div>
                 </div>
             </div>
