--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 </div>
 
                 <div class="contents">
-                    <div class="page" data-page-name="allBandMembers" data-page-title="All Band Members">
+                    <div class="page allBandMembers" data-page-name="allBandMembers" data-page-title="All Band Members">
 
                     </div>
                 </div>
