--- a/index.html
+++ b/index.html
@@ -176,8 +176,24 @@
                 </div>
 
                 <div class="contents">
-                    <div class="page allBandMembers" data-page-name="allBandMembers" data-page-title="All Band Members">
+                    <div class="page allMembers" data-page-name="allBandMembers" data-page-title="All Band Members">
 
+                        <button class="navLeft"><img src="img/icons/largeLeftArrow.svg"></button>
+
+                        <div class="img">
+                            <img src="img/Placeholder.png">
+                        </div>
+
+                        <div class="text">
+                            <h4 class="name">Member Name</h4>
+                            <p class="description">Member Description</p>
+                        </div>
+
+                        <div class="list">
+                            
+                        </div>
+                        
+                        <button class="navRight"><img src="img/icons/largeRightArrow.svg"></button>
                     </div>
                 </div>
             </div>
