Break CSS into two

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
         <link href="css/site.css" rel="stylesheet">
+        <link href="css/home.css" rel="stylesheet">
 
         <!-- Crush 40 JavaScript -->
         <script src="js/site.js"></script>
