Move "All Members" into iframe

--- a/menus/allMembers.html
+++ b/menus/allMembers.html
@@ -2,8 +2,28 @@
     <head>
         <title>All Band Members</title>
 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="../css/site.css" rel="stylesheet">
+
+        <link href="css/allMembers.css" rel="stylesheet">
+
     </head>
     <body>
-        <h1>Test!</h1>
+        <button class="navLeft"><img src="../img/icons/largeLeftArrow.svg"></button>
+
+        <div class="img">
+            <img src="../img/Placeholder.png">
+        </div>
+
+        <div class="text">
+            <h4 class="name">Member Name</h4>
+            <p class="description">Member Description</p>
+        </div>
+
+        <div class="list">
+
+        </div>
+        
+        <button class="navRight"><img src="../img/icons/largeRightArrow.svg"></button>
     </body>
 </html>
