Add view updating code

--- a/menus/allMembers.html
+++ b/menus/allMembers.html
@@ -7,6 +7,22 @@
 
         <link href="css/allMembers.css" rel="stylesheet">
 
+        <script src="js/allMembers.js"></script>
+
+        <!-- Members -->
+        <script>
+var members = [
+    { 
+        name: 'Takashi', 
+        description: "Just a drummer lol", 
+        img: 'Placeholder.png',
+        works: [
+            { type: "show", name: "2 Nights 2 Remember" },
+            { type: "song", name: "2 Nights 2 Remember" }
+        ]
+    }
+];
+        </script>
     </head>
     <body>
         <button class="navLeft"><img src="../img/icons/largeLeftArrow.svg"></button>
@@ -16,7 +32,7 @@
         </div>
 
         <div class="text">
-            <h4 class="name">Member Name</h4>
+            <h2 class="name">Member Name</h2>
             <p class="description">Member Description</p>
         </div>
 
