Add button functionality

--- a/menus/allMembers.html
+++ b/menus/allMembers.html
@@ -7,8 +7,6 @@
 
         <link href="css/allMembers.css" rel="stylesheet">
 
-        <script src="js/allMembers.js"></script>
-
         <!-- Members -->
         <script>
 var members = [
@@ -23,9 +21,22 @@ var members = [
             { type: "song", name: "Big Mouth" },
             { type: "song", name: "Light of the Day" }
         ]
+    },
+    { 
+        name: 'Test 2', 
+        description: "Just a bassist lol", 
+        img: 'Placeholder.png',
+        works: [
+            { type: "show", name: "Tokyo 2011" },
+            { type: "show", name: "2 Nights 2 Remember" },
+            { type: "show", name: "Live!" },
+            { type: "song", name: "Down & Dirty" },
+        ]
     }
 ];
         </script>
+
+        <script src="js/allMembers.js"></script>
     </head>
     <body>
         <button class="navLeft"><img src="../img/icons/largeLeftArrow.svg"></button>
