--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
 
-        <div class="background"></div>
+        <div class="backgroundContainer"><div class="background"></div></div>
         
         <!-- Opening -->
         <div class="opening section">
