--- a/menus/allMembers.html
+++ b/menus/allMembers.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>All Band Members</title>
+        <title>Other Band Members</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="../css/site.css" rel="stylesheet">
