Allow flex wrapping

--- a/menus/allMembers.html
+++ b/menus/allMembers.html
@@ -19,7 +19,9 @@ var members = [
             { type: "song", name: "2 Nights 2 Remember" },
             { type: "song", name: "Down & Dirty" },
             { type: "song", name: "Big Mouth" },
-            { type: "song", name: "Light of the Day" }
+            { type: "song", name: "Light of the Day" },
+            { type: "song", name: "Another Thing" },
+            { type: "song", name: "Another Another" }
         ]
     },
     { 
