Improve list accessibility

--- a/menus/allMembers.html
+++ b/menus/allMembers.html
@@ -55,9 +55,9 @@ var members = [
     
             <div class="works">
                 <h2>Works</h2>
-                <div class="list">
+                <ul class="list">
     
-                </div>
+                </ul>
             </div>
         </div>
 
