Add navbar with styling

--- a/index.html
+++ b/index.html
@@ -12,7 +12,33 @@
     <body>
 
         <div class="backgroundContainer"><div class="background"></div></div>
-        
+
+        <!-- Navbar -->
+        <nav class="nav">
+            <ul class="nav-items">
+                <li>
+                    <div class="back"></div>
+                    <p>Discography</p>
+                </li>
+                <li>
+                    <div class="back"></div>
+                    <p>Gear</p>
+                </li>
+                <li>
+                    <div class="back"></div>
+                    <p>Media</p>
+                </li>
+                <li>
+                    <div class="back"></div>
+                    <p>Shows</p>
+                </li>
+                <li>
+                    <div class="back"></div>
+                    <p>Branding</p>
+                </li>
+            </ul>
+        </nav>
+    
         <!-- Opening -->
         <div class="opening section">
 
