Add "About" to nav

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             <ul class="nav-items">
                 <li>
                     <div class="back"></div>
+                    <p>About</p>
+                </li>
+                <li>
+                    <div class="back"></div>
                     <p>Discography</p>
                 </li>
                 <li>
