Add logo/hover to navbar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
         <!-- Navbar -->
         <nav class="nav">
-            <ul class="nav-items">
+            <img class="logo" src="img/logo_white.svg" alt="Crush 40 Logo">
+
+            <ul class="items">
                 <li>
                     <div class="back"></div>
                     <p>About</p>
