Add selected indicator

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img class="logo" src="img/logo_white.svg" alt="Crush 40 Logo">
 
             <ul class="items">
-                <li>
+                <li class="selected">
                     <div class="back"></div>
                     <p>About</p>
                 </li>
