Improve responsiveness of "All Members"

--- a/menus/allMembers.html
+++ b/menus/allMembers.html
@@ -41,7 +41,9 @@ var members = [
         <script src="js/allMembers.js"></script>
     </head>
     <body>
-        <button class="navLeft"><img src="../img/icons/largeLeftArrow.svg"></button>
+        <div class="fixedToCenter fixedLeft">
+            <button class="navLeft"><img src="../img/icons/largeLeftArrow.svg"></button>
+        </div>
 
         <div class="contents">
             <div class="img">
@@ -61,6 +63,8 @@ var members = [
             </div>
         </div>
 
-        <button class="navRight"><img src="../img/icons/largeRightArrow.svg"></button>
+        <div class="fixedToCenter fixedRight">
+            <button class="navRight"><img src="../img/icons/largeRightArrow.svg"></button>
+        </div>
     </body>
 </html>
