Add mobile menu navigation

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 
         <!-- Navbar -->
         <nav class="nav">
-            <img class="logo" src="img/logo_white.svg" alt="Crush 40 Logo">
+            <div class="other">
+                <img class="logo" src="img/logo_white.svg" alt="Crush 40 Logo">
+                <button class="btn"><img src="img/icons/hamburgerMenu.svg"></button>
+            </div>
 
             <ul class="items">
                 <li class="selected">
