Create visual guitar + Update guitar graphics

--- a/index.html
+++ b/index.html
@@ -144,6 +144,14 @@
                 <p>The band was originally titled <span style="font-size: 120%">"Sons of Angels"</span> - but they soon discovered a <i>Norwegian rock band</i> already had the same name, who were thinking <span style="font-size: 80%">"Sons of..."</span>.</p>
                 <p>So, they changed it - and their new name, "Crush 40", was a combination of Johnny's wishes at the time, as well as Jun's personal preferences:</p>
             </div>
+
+            <div class="guitars">
+                <div class="guitar">
+                    <img class="body" src="img/visuals/GuitarLoop/Body.svg">
+                    <div class="neck"></div>
+                    <img class="headstock" data-snap-to="20" src="img/visuals/GuitarLoop/Headstock.svg">
+                </div>
+            </div>
             
         </div>
 
