Add snapping to headstock movement

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link href="css/home.css" rel="stylesheet">
 
         <!-- Crush 40 JavaScript -->
+        <script src="js/home.js"></script>
         <script src="js/site.js"></script>
     </head>
     <body>
@@ -149,7 +150,7 @@
                 <div class="guitar">
                     <img class="body" src="img/visuals/GuitarLoop/Body.svg">
                     <div class="neck"></div>
-                    <img class="headstock" data-snap-to="20" src="img/visuals/GuitarLoop/Headstock.svg">
+                    <img class="headstock headstock-right" src="img/visuals/GuitarLoop/Headstock.svg">
                 </div>
             </div>
             
