Add responsive guitar sizing + Contents

--- a/index.html
+++ b/index.html
@@ -152,6 +152,10 @@
                     <div class="neck"></div>
                     <img class="headstock headstock-right" src="img/visuals/GuitarLoop/Headstock.svg">
                 </div>
+                <div class="middle">
+                    <p>Oh yeah - and they have custom guitars too!</p>
+                    <button style="font-size: 100%" class="emptyButton btnBlue btnWidthWide" href="#" data-action="panel" data-page-name="allMembers">View gear</button>
+                </div>
             </div>
             
         </div>
