--- a/index.html
+++ b/index.html
@@ -153,8 +153,11 @@
                     <img class="headstock headstock-right" src="img/visuals/GuitarLoop/Headstock.svg">
                 </div>
                 <div class="middle">
-                    <p>Oh yeah - and they have custom guitars too!</p>
-                    <button style="font-size: 100%" class="emptyButton btnBlue btnWidthWide" href="#" data-action="panel" data-page-name="allMembers">View gear</button>
+                    <div class="contents">
+                        <p class="heading">Oh - and there's even custom "Crush 40" guitars by ESP!</p>
+                        <p class="subheading"><i>Jun uses these live!</i></p>
+                        <button class="emptyButton btnBlack btnWidthWide" href="#" data-action="panel" data-page-name="allMembers">Check out their gear</button>
+                    </div>
                 </div>
             </div>
             
