--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </div>
 
             <div class="guitars">
-                <div class="guitar">
+                <div class="guitar guitar-top">
                     <img class="body" src="img/visuals/GuitarLoop/Body.svg">
                     <div class="neck"></div>
                     <img class="headstock headstock-right" src="img/visuals/GuitarLoop/Headstock.svg">
@@ -158,6 +158,11 @@
                         <p class="subheading"><i>Jun uses these live!</i></p>
                         <button class="emptyButton btnBlack btnWidthWide" href="#" data-action="panel" data-page-name="allMembers">Check out their gear</button>
                     </div>
+                </div>
+                <div class="guitar guitar-bottom">
+                    <img class="body" src="img/visuals/GuitarLoop/Body.svg">
+                    <div class="neck"></div>
+                    <img class="headstock headstock-right" src="img/visuals/GuitarLoop/Headstock.svg">
                 </div>
             </div>
             
