Remove "Check out gear" incorrect action

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <div class="contents">
                         <p class="heading">Oh - and there's even custom "Crush 40" guitars by ESP!</p>
                         <p class="subheading"><i>Jun uses these live!</i></p>
-                        <button class="emptyButton btnBlack btnWidthWide" href="#" data-action="panel" data-page-name="allMembers">Check out their gear</button>
+                        <button class="emptyButton btnBlack btnWidthWide" href="#">Check out their gear</button>
                     </div>
                 </div>
                 <div class="guitar guitar-bottom">
