Separate guitars section from intro

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
         </div>
 
         <div class="intro section">
-            <h1 style="text-align: center;">Introducing... Crush 40!</h1>
+            <h2 style="text-align: center;">Introducing... Crush 40!</h2>
 
             <!-- What is Crush 40? -->
             <div class="blockTitle">
-                <h2>What is Crush 40?</h2>
+                <h3>What is Crush 40?</h3>
             </div>
 
             <div class="whoIsC40 strip stripUp">
@@ -92,7 +92,7 @@
             <!-- Band Members -->
             <div class="blockTitleRight">
                 <div class="blockTitle">
-                    <h2>Band Members</h2>
+                    <h3>Band Members</h3>
                 </div>
             </div>
 
@@ -116,7 +116,7 @@
                 <img class="junImg img" src="img/content/Jun.jpg">
 
                 <div class="junMrJun">
-                    <h3>"Mr Jun Senoue!"</h3>
+                    <h4>"Mr Jun Senoue!"</h4>
                     <p>Johnny <i>loves</i> introducing Jun at Crush 40 shows... <b>A lot</b>...</p>
                     <img src="img/Placeholder.png">
                 </div>
@@ -126,7 +126,7 @@
                 <div class="stripBack"></div>
 
                 <div class="stripText">
-                    <h3>Drums and bass?</h3>
+                    <h4>Drums and bass?</h4>
                     <p>"Crush 40" does not have a set drummer and bass player!</p> 
                     <p>They either rely on a <span style="font-size: 120%">backing track</span> live, or some other member to fill in temporarily.</span></p>
                     <p>You can view a complete list of all the drummers/bass players they've used here:</p>
@@ -138,34 +138,39 @@
 
             <!-- Why "Crush 40"? -->
             <div class="blockTitle">
-                <h2>Why "Crush 40"?</h2>
+                <h3>Why "Crush 40"?</h3>
             </div>
             
             <div class="naming introSection">
                 <p>The band was originally titled <span style="font-size: 120%">"Sons of Angels"</span> - but they soon discovered a <i>Norwegian rock band</i> already had the same name, who were thinking <span style="font-size: 80%">"Sons of..."</span>.</p>
                 <p>So, they changed it - and their new name, "Crush 40", was a combination of Johnny's wishes at the time, as well as Jun's personal preferences:</p>
             </div>
+        </div>
 
-            <div class="guitars">
-                <div class="guitar guitar-top">
-                    <img class="body" src="img/content/guitars/Sonic-II/BodyHorizontal.svg">
-                    <div class="neck"></div>
-                    <img class="headstock headstock-right" src="img/content/guitars/Sonic-II/HeadstockHorizontal.svg">
-                </div>
-                <div class="middle">
-                    <div class="contents">
-                        <p class="heading">Oh - and there's even custom "Crush 40" guitars by ESP!</p>
-                        <p class="subheading"><i>Jun uses these live!</i></p>
-                        <button class="emptyButton btnBlack btnWidthWide" href="#">Check out their gear</button>
-                    </div>
-                </div>
-                <div class="guitar guitar-bottom">
-                    <img class="body" src="img/content/guitars/Shadow-II/BodyHorizontal.svg">
-                    <div class="neck"></div>
-                    <img class="headstock headstock-right" src="img/content/guitars/Shadow-II/HeadstockHorizontal.svg">
+        <!-- Guitars -->
+        <div class="guitars section">
+            <div class="guitar guitar-top">
+                <img class="body" src="img/content/guitars/Sonic-II/BodyHorizontal.svg">
+                <div class="neck"></div>
+                <img class="headstock headstock-right" src="img/content/guitars/Sonic-II/HeadstockHorizontal.svg">
+            </div>
+            <div class="middle">
+                <div class="contents">
+                    <p class="heading">Oh - and there's even custom "Crush 40" guitars by ESP!</p>
+                    <p class="subheading"><i>Jun uses these live!</i></p>
+                    <button class="emptyButton btnWidthWide" href="#">Check out their gear</button>
                 </div>
             </div>
-            
+            <div class="guitar guitar-bottom">
+                <img class="body" src="img/content/guitars/Shadow-II/BodyHorizontal.svg">
+                <div class="neck"></div>
+                <img class="headstock headstock-right" src="img/content/guitars/Shadow-II/HeadstockHorizontal.svg">
+            </div>
+        </div>
+
+        <div class="trivia section">
+            <h2>Trivia Quiz</h2>
+            <p>How well do you know Crush 40?</p>
         </div>
 
         <!-- Main Info -->
