Add trivia section

--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
 
         <div class="trivia section">
             <h2>Trivia Quiz</h2>
-            <p>How well do you know Crush 40?</p>
+            <p class="description">Find out how well you know Crush 40 right here on the site - through this interactive trivia quiz!</p>
+            <button style="font-size: 125%" class="filledButton btnWidthWide takeTrivia" href="#">Start the quiz</button>
         </div>
 
         <!-- Main Info -->
