Remove prototype contents

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             </div>
         </div>
 
+        <!-- Introducing... Crush 40! -->
         <div class="intro section">
             <h2 style="text-align: center;">Introducing... Crush 40!</h2>
 
@@ -168,63 +169,11 @@
             </div>
         </div>
 
+        <!-- Trivia -->
         <div class="trivia section">
             <h2>Trivia Quiz</h2>
             <p class="description">Find out how well you know Crush 40 right here on the site - through this interactive trivia quiz!</p>
             <button style="font-size: 125%" class="filledButton btnWidthWide takeTrivia" href="#">Start the quiz</button>
-        </div>
-
-        <!-- Main Info -->
-        <div class="mainInfo section">
-            <h1>OLD STUFF:</h1>
-            <h1>What is Crush 40?</h1>
-            <p>Crush 40 is a Japanese-American band that produces <b>high-quality</b>, hard rock music.</p>
-            <p>The lead vocalist is <b>Johnny Gioeli</b> and the lead guitarist is <b>Jun Senoue</b>.</p>
-            <div class="memberShowcase">
-                <div>
-                    <img src="img/content/members/Johnny.jpg">
-                    <p class="mainInfoImgCaption">Johnny Gioeli</p>
-                </div>
-                <div>
-                    <img src="img/content/members/Jun.jpg">
-                    <p class="mainInfoImgCaption">Jun Senoue</p>
-                </div>
-            </div>
-            <p>They are most known as the band behind many of the Sonic the Hedgehog video game songs.</p>
-            <p>However, with time they have made their own personal songs, such as their <b>Rise Again EP</b> or <b>2 Nights 2 Remember</b> album.</p>
-        </div>
-
-        <!-- LIVE -->
-        <div class="live section">
-            <h1>LIVE</h1>
-            <p>Watch Crush 40 <b>rock the crowd</b> with clips of their live performances!</p>
-
-            <div class="live-strip">
-                <img src="img/content/videos/His World.jpg">
-                <img src="img/content/videos/Live and Learn.jpg">
-                <img src="img/content/videos/What I'm Made Of Youmacon.jpg">
-            </div>
-        </div>
-
-        <!-- More Information -->
-        <div class="moreInfo section">
-            <h1>More Information</h1>
-
-            <div class="moreInfoPart moreInfoLeft">
-                <h2>Crush 40 is awesome</h2>
-                <p class="description">Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!</p>
-
-                <img src="img/Placeholder.png">
-                <p class="imgCaption">A placeholder image</p>
-            </div>
-
-            <div class="moreInfoPart moreInfoRight">
-                <h2>Crush 40 is awesome</h2>
-                <p class="description">Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!Crush 40 is awesome!</p>
-
-                <img src="img/Placeholder.png">
-                <p class="imgCaption">A placeholder image</p>
-            </div>
         </div>
 
         <div class="floating">
